testdata/invalid/invalid_const_invalid_const_type.bop
const date l = "rfc3339";